@@ -90,6 +90,8 @@ namespace Server.Network
 			{
 				m_Queue.Enqueue( ns );
 			}
+
+			Core.WakeUp();
 		}
 
 		public void Slice()
@@ -119,6 +121,8 @@ namespace Server.Network
 
 		public bool HandleReceive( NetState ns )
 		{
+			Console.WriteLine("HandleReceive Thread={0}", System.Threading.Thread.CurrentThread.Name);
+
 			lock ( ns )
 			{
 				ByteQueue buffer = ns.Buffer;
